[gd_scene load_steps=15 format=3 uid="uid://ds4gbleycp8dr"]

[ext_resource type="Script" path="res://source/UI/widgets/w_card.gd" id="1_0thyn"]
[ext_resource type="Texture2D" uid="uid://dv6v5csnn38dq" path="res://asserts/textures/cards/card_frame/card_frame.png" id="2_7kppa"]
[ext_resource type="Texture2D" uid="uid://bsbfj2nykta2u" path="res://asserts/textures/cards/card_frame/card_name_frame.png" id="3_fxb6n"]
[ext_resource type="Texture2D" uid="uid://dyw32f4gxh3gr" path="res://asserts/textures/cards/card_frame/card_cost_frame.png" id="4_d8764"]
[ext_resource type="Texture2D" uid="uid://dalxihsw5t304" path="res://asserts/textures/cards/card_icons/card_strike.png" id="5_lbvm3"]
[ext_resource type="Texture2D" uid="uid://dq8cid5wbnlhq" path="res://asserts/textures/cards/card_frame/card_des_frame.png" id="6_0ijkk"]
[ext_resource type="FontFile" uid="uid://bp53tlinpuypa" path="res://asserts/fonts/SourceHanSansCN-Normal.otf" id="7_8nmba"]
[ext_resource type="Texture2D" uid="uid://bogxjs57u701s" path="res://asserts/textures/cards/card_frame/card_type_frame.png" id="7_f5xms"]
[ext_resource type="FontFile" uid="uid://cqpfbqec73olb" path="res://asserts/fonts/SourceHanSansCN-Bold.otf" id="8_ta4ns"]
[ext_resource type="FontFile" uid="uid://drg6qfljcph8r" path="res://asserts/fonts/SourceHanSansCN-ExtraLight.otf" id="9_y8cw6"]
[ext_resource type="FontFile" uid="uid://6oc5e4qxi5oy" path="res://asserts/fonts/SourceHanSansCN-Medium.otf" id="10_6gfg7"]
[ext_resource type="PackedScene" uid="uid://dlea1lgk4q4ic" path="res://source/UI/widgets/w_tooltip.tscn" id="22_oikip"]

[sub_resource type="LabelSettings" id="LabelSettings_2wkfj"]
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m5d0h"]
font_size = 13
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="w_card" type="Control"]
custom_minimum_size = Vector2(108, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 108.0
offset_bottom = 160.0
pivot_offset = Vector2(54, 160)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_0thyn")

[node name="card_frame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_7kppa")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="tr_name" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("3_fxb6n")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("4_d8764")

[node name="lab_cost" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_2wkfj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3

[node name="lab_name" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "全身撞击+"
label_settings = SubResource("LabelSettings_m5d0h")
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="tr_icon" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_lbvm3")
expand_mode = 1

[node name="tr_description" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_0ijkk")
patch_margin_left = 20
patch_margin_top = 6
patch_margin_right = 16
patch_margin_bottom = 14

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/tr_description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="lab_description" type="RichTextLabel" parent="MarginContainer/VBoxContainer/tr_description/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("7_8nmba")
theme_override_fonts/bold_font = ExtResource("8_ta4ns")
theme_override_fonts/italics_font = ExtResource("9_y8cw6")
theme_override_fonts/bold_italics_font = ExtResource("7_8nmba")
theme_override_fonts/mono_font = ExtResource("10_6gfg7")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "造成你当前格挡值的[color=yellow]伤害[/color]。
（造成0点伤害）"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -75.0
offset_right = 25.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer3"]
custom_minimum_size = Vector2(40, 18)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("7_f5xms")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3"]
layout_mode = 2
theme_override_constants/margin_bottom = 4

[node name="lab_type" type="Label" parent="MarginContainer3/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 12
text = "攻击"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TipContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 109.0
offset_right = 259.0
offset_bottom = 83.0
scale = Vector2(0.6, 0.6)
metadata/_edit_group_ = true

[node name="w_tooltip" parent="TipContainer" instance=ExtResource("22_oikip")]
layout_mode = 2

[node name="w_tooltip2" parent="TipContainer" instance=ExtResource("22_oikip")]
layout_mode = 2
